syntax = "proto3";

package pb;

option go_package = "github.com/Banana-Boat/terryminal/terminal-service/internal/pb";

import "google/protobuf/timestamp.proto";

/* SendMail */
message SendMailRequest {
  // 赋值的数字用于唯一标识该字段，范围[1, 2^29-1]
  string destAddr = 1;
  string content = 2;
}

message SendMailResponse {
  google.protobuf.Timestamp createdAt = 1;
}

/* Service */
service MailService {
  rpc SendMail (SendMailRequest) returns (SendMailResponse) {}
}